cmake_minimum_required(VERSION 2.6)

set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})

add_subdirectory(qmf1)
add_subdirectory(qmf2)

find_library(HAVE_QMF1 qmfconsole)
find_library(HAVE_QMF2 qmf2)
if (HAVE_QMF1 OR HAVE_QMF2)
    message(STATUS "Found the following QMF libraries:")
    if (HAVE_QMF1)
        message(STATUS "  QMFv1 (${HAVE_QMF1})")
    endif (HAVE_QMF1)
    if (HAVE_QMF2)
        message(STATUS "  QMFv2 (${HAVE_QMF2})")
    endif (HAVE_QMF2)
else ()
    message(FATAL_ERROR "Unable to find any QMF libraries.")
endif ()
